--- a/index.html
+++ b/index.html
@@ -55,48 +55,133 @@
 			</div>
 		</header>
 		<!-- main section -->
-		<main class="space-y-12 mx-32">
-			<div class="best-offer-section space-y-10">
-				<h1 class="text-4xl text-center font-bold">Best offers for you</h1>
-				<div class="coupon-section mt-10 flex justify-center gap-5">
-					<div class="coupon-1 bg-yellow-400 h-56 flex rounded-2xl flex-1">
-						<div class="flex-col p-10 h-full items-center">
-							<div><h2 class="font-extrabold text-4xl">15% OFF</h2></div>
-							<div><p class="font-bold">on your next purchase</p></div>
-							<div>
-								<p class="text-gray-600 font-normal">use by January 2024</p>
+		<main class="space-y-20">
+			<div class="best-offer-section-container mx-32">
+				<div class="best-offer-section space-y-10">
+					<h1 class="text-4xl text-center font-bold">Best offers for you</h1>
+					<div class="coupon-section mt-10 flex justify-center gap-5">
+						<div class="coupon-1 bg-yellow-400 h-56 flex rounded-2xl flex-1">
+							<div class="flex-col p-10 h-full items-center">
+								<div><h2 class="font-extrabold text-4xl">15% OFF</h2></div>
+								<div><p class="font-bold">on your next purchase</p></div>
+								<div>
+									<p class="text-gray-600 font-normal">use by January 2024</p>
+								</div>
+							</div>
+							<img src="images/cupon-devider.png" alt="" />
+							<div class="flex-col items-center p-10">
+								<h2 class="font-bold text-4xl">NEW15</h2>
+								<p>Coupon Code</p>
 							</div>
 						</div>
-						<img src="images/cupon-devider.png" alt="" />
-						<div class="flex-col items-center p-10">
-							<h2 class="font-bold text-4xl">NEW15</h2>
-							<p>Coupon Code</p>
-						</div>
-					</div>
-					<div class="coupon-1 bg-pink-400 h-56 flex rounded-2xl flex-1">
-						<div class="flex-col p-10 h-full items-center">
-							<div><h2 class="font-extrabold text-4xl">15% OFF</h2></div>
-							<div><p class="font-bold">on your next purchase</p></div>
-							<div>
-								<p class="text-gray-600 font-normal">use by January 2024</p>
+						<div class="coupon-1 bg-pink-400 h-56 flex rounded-2xl flex-1">
+							<div class="flex-col p-10 h-full items-center">
+								<div><h2 class="font-extrabold text-4xl">15% OFF</h2></div>
+								<div><p class="font-bold">on your next purchase</p></div>
+								<div>
+									<p class="text-gray-600 font-normal">use by January 2024</p>
+								</div>
+							</div>
+							<img src="images/cupon-devider.png" alt="" />
+							<div class="flex-col items-center p-10">
+								<h2 class="font-bold text-4xl">NEW15</h2>
+								<p>Coupon Code</p>
 							</div>
 						</div>
-						<img src="images/cupon-devider.png" alt="" />
-						<div class="flex-col items-center p-10">
-							<h2 class="font-bold text-4xl">NEW15</h2>
-							<p>Coupon Code</p>
-						</div>
 					</div>
-				</div>
-				<div class="offer-btn flex justify-center">
-					<button
-						class="btn text-green-600 border-green-300 bg-green-200 active:bg-green-300 hover:bg-green-300"
-					>
-						See All Offers
-					</button>
+					<div class="offer-btn flex justify-center">
+						<button
+							class="btn text-green-600 border-green-300 bg-green-200 active:bg-green-300 hover:bg-green-300"
+						>
+							See All Offers
+						</button>
+					</div>
 				</div>
 			</div>
+
 			<!-- ticket system section -->
+			<div
+				class="ticket-section-container bg-slate-100 mt-20 border border-green-300 rounded-3xl"
+			>
+				<h1 class="font-bold text-4xl text-center mt-28">T-Tickets</h1>
+				<p class="font-normal text-center mt-8">
+					Yes, you can run unit tests and view the results directly within the
+					app. The integrated <br />
+					testing features allow for a streamlined .
+				</p>
+				<div
+					class="ticket-section-card-container mx-32 bg-white mt-20 rounded-2xl"
+				>
+					<div class="card-container flex p-10">
+						<div class="card-section-1 w-4/5">
+							<div
+								class="card-title-container flex flex-col justify-between space-y-10"
+							>
+								<div class="flex justify-between">
+									<div class="card-left-side flex gap-4">
+										<div class="bg-center mt-2">
+											<img src="images/bus-logo.png" alt="" />
+										</div>
+										<div class="">
+											<h2 class="font-bold text-3xl">Greenline Paribahan</h2>
+											<p class="text-gray-500">Coach-009-WEB ! AC_Business</p>
+										</div>
+									</div>
+									<div class="card-right-side text-lg">
+										<button
+											class="btn text-green-600 border-green-300 bg-green-200 active:bg-green-300 hover:bg-green-300"
+										>
+											<img src="images/bus-icon.png" alt="" />
+											<span id="seat-number text-lg">40</span>seats left
+										</button>
+									</div>
+								</div>
+								<div
+									class="card-body-section-container rounded-2xl bg-gray-200 p-10"
+								>
+									<div class="row-1 flex justify-between">
+										<p>Route</p>
+										<p>Dhaka-Sylhet</p>
+									</div>
+									<div class="border border-dashed border-gray-400 mt-6"></div>
+									<div class="row-2 flex justify-between mt-6">
+										<p>Departure Time</p>
+										<p>9:00 PM</p>
+									</div>
+									<div class="border border-dashed border-gray-400 mt-6"></div>
+									<div class="row-3 mt-6 flex justify-evenly gap-3">
+										<button class="btn btn-outline flex-1">
+											Boarding Point - Laxmipur
+										</button>
+										<button class="btn btn-outline flex-1">
+											Dropping Point - Bogura
+										</button>
+										<button class="btn btn-outline flex-1">
+											Est. Time - 11 Hour
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="divider-img">
+							<img src="images/info-devider.png" alt="" />
+						</div>
+						<div class="card-section-2 w-1/5 flex justify-center items-center">
+							<div class="flex flex-col justify-center items-center">
+								<div>
+									<img src="images/fare.png" alt="" />
+								</div>
+								<div>
+									<h1 class="font-extrabold text-4xl text-center">
+										550 Taka <br />
+										Per Seat
+									</h1>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<!-- footer section -->
 		<!-- script section -->
