--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			}
 		</style>
 	</head>
-	<body class="w-full min-h-screen mx-auto space-y-16 font-raleway">
+	<body class="w-full min-h-screen mx-auto font-raleway">
 		<!-- header section -->
 		<header class="space-y-12 mx-32">
 			<div class="flex justify-between mt-10">
@@ -68,7 +68,7 @@
 		</header>
 		<!-- main section -->
 		<main class="space-y-20">
-			<div class="best-offer-section-container mx-32">
+			<div class="best-offer-section-container mx-32 mt-12">
 				<div class="best-offer-section space-y-10">
 					<h1 class="text-4xl text-center font-bold">Best offers for you</h1>
 					<div class="coupon-section mt-10 flex justify-center gap-6">
@@ -103,7 +103,7 @@
 					</div>
 					<div class="offer-btn flex justify-center">
 						<button
-							class="btn text-green-600 border-green-300 bg-green-200 active:bg-green-300 hover:bg-green-300"
+							class="mt-10 btn text-green-600 border-green-300 bg-green-200 active:bg-green-300 hover:bg-green-300"
 						>
 							See All Offers
 						</button>
@@ -117,10 +117,9 @@
 				class="ticket-section-container bg-slate-100 mt-20 rounded-t-3xl border-t-2 border-solid border-green-500"
 			>
 				<h1 class="font-bold text-4xl text-center mt-28">T-Tickets</h1>
-				<p class="font-normal text-center mt-8">
-					Yes, you can run unit tests and view the results directly within the
-					app. The integrated <br />
-					testing features allow for a streamlined .
+				<p class="font-normal text-lg text-center mt-8">
+					Experience seamless ticket booking at T-Tickets counter – your
+					one-stop destination for stress-free travel arrangements! 🎟️🚌
 				</p>
 				<div
 					class="ticket-section-card-container mx-32 bg-white mt-20 rounded-2xl"
@@ -196,7 +195,7 @@
 				</div>
 				<div class="seat-selection-container bg-white mx-32 mt-20 rounded-2xl">
 					<div
-						class="seat-selection-card-container flex gap-10 justify-between p-10"
+						class="seat-selection-card-container flex gap-10 justify-between p-10 my-10"
 					>
 						<div class="w-3/5">
 							<h1 class="text-2xl font-semibold">Select Your Seat</h1>
@@ -415,7 +414,10 @@
 								</label>
 								<!-- modal button -->
 								<!-- Open the modal using ID.showModal() method -->
-								<button class="btn w-full" onclick="my_modal_1.showModal()">
+								<button
+									class="btn w-full text-white bg-green-500 border-none active:bg-green-600 hover:bg-green-600"
+									onclick="my_modal_1.showModal()"
+								>
 									Next
 								</button>
 								<dialog id="my_modal_1" class="modal">
@@ -460,6 +462,40 @@
 		</main>
 		<!-- footer section -->
 
+		<footer>
+			<div
+				class="footer-section-container bg-sky-950 w-full h-[460px] border border-sky-950"
+			>
+				<div class="footer-section mt-40 mx-32">
+					<div class="flex justify-between">
+						<div class="flex flex-col gap-8">
+							<div class="title-text text-4xl font-extrabold text-white">
+								T-Tickets
+							</div>
+							<div class="text-lg text-white">
+								T-Tickets is a digital platform to make your <br />daily
+								commuting better.
+							</div>
+						</div>
+						<div class="flex flex-col gap-8">
+							<div class="text-xl text-white">Download Our App</div>
+							<div><img src="images/playstore-icon.svg" alt="" /></div>
+						</div>
+					</div>
+					<div class="border border-dashed border-gray-50 my-6"></div>
+					<div class="flex justify-between">
+						<div class="text-sm text-gray-400">
+							@all rights reserved, P-Ticket services limited.2024
+						</div>
+						<div class="flex justify-around gap-8">
+							<div class="text-sm text-gray-200">Terms & condition</div>
+							<div class="text-sm text-gray-200">Return & refund policy</div>
+							<div class="text-sm text-gray-200">Privacy policy</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<!-- script section -->
 		<script src="navigation.js"></script>
 		<script src="seat_selection.js"></script>
